# phog

./: .gitignore  Cargo.toml  LICENSE  README.md
lang/: template.pot
lang/fr/LC_MESSAGES/: pgt.po  phog.mo
src/: circ_buf.rs  lib.rs  logic.rs  main.rs
ui/: app-window.slint
