[package]
name = "phog"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = {version = "1.10.0", features = ["gettext"]}
tokio = { version = "1", features = ["full"] }
image = "0.25"
turbojpeg = {version = "1.0", features = ["image"]}
kamadak-exif = "0.6.1"
async-compat = "0.2.4"
# [dev-dependencies]

[build-dependencies]
slint-build = "1.10.0"  